tests/ty-name-escape-01/out.txt
error: expression causes a type name to escape its scope
  ┌─ err.sml:6:30
  │
6 │     true; false; bar; 3 + 3; quz
  │                              ^^^

typechecking failed
